fix: add text decoration to button styles for improved visibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,6 +89,7 @@ background:var(--color-1);
   line-height: 15px;
   font-size: 17px;
   padding: 18px 30px;
+  text-decoration: none;
 
   -webkit-box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.40);
   -moz-box-shadow: 0px 0px 5px -1px rgba(0,0,0,0.40);
